Prevent label wrapping in DropdownList
Added white-space: nowrap to the __label class in DropdownList styles to ensure labels do not wrap onto multiple lines.

--- a/src/components/dropdowns/DropdownList/styles.scss
+++ b/src/components/dropdowns/DropdownList/styles.scss
@@ -68,6 +68,10 @@
     @include flex-center;
   }
 
+  &__label {
+    white-space: nowrap;
+  }
+
   &__separator {
     height: 1px;
     background-color: var(--border-color);
